:lock: Externalize secrets via Secrets.xcconfig and scrub PII
- Revert Python-side dotenv support (unnecessary for CLI); remove
  python-dotenv dep, .env, .env.example, and _resolve_ollama_url()
- Fix xcconfig loading: use XcodeGen `configFiles` instead of
  `settings.configs.xcconfig` so OLLAMA_BASE_URL actually resolves
  at build time (was silently empty → "unsupported URL" error)
- Move DEVELOPMENT_TEAM and PRODUCT_BUNDLE_IDENTIFIER into
  Secrets.xcconfig; replace hard-coded values with $(VAR) refs
- Replace @algoltek.com with @acme.com in LLM prompt examples
  (both Swift and Python) to avoid leaking company domain
- Clear pyproject.toml authors to remove personal email
- Drop GENERATE_INFOPLIST_FILE; write full Info.plist manually
  so custom keys (OllamaBaseURL) are reliably included
- Add .DS_Store to .gitignore; add Secrets.xcconfig.example with
  placeholder values; update README with iOS setup instructions
- Add preBuildScript that errors with actionable message when
  Secrets.xcconfig is missing on a fresh clone

--- a/BusinessCardScanner/Info.plist
+++ b/BusinessCardScanner/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleName</key>
+	<string>$(PRODUCT_NAME)</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleVersion</key>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>CFBundleShortVersionString</key>
+	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundlePackageType</key>
+	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -11,5 +23,21 @@
 	<array>
 		<string>_http._tcp</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera access is needed to take photos of business cards for scanning.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo library access is needed to select existing business card images.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Contacts access is needed to save scanned business card information.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Local network access is needed to connect to the Ollama LLM server.</string>
+	<key>UILaunchScreen</key>
+	<dict/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>OllamaBaseURL</key>
+	<string>$(OLLAMA_BASE_URL)</string>
 </dict>
 </plist>
