--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OS
+.DS_Store
+
 # Python-generated files
 __pycache__/
 *.py[oc]
@@ -34,6 +37,7 @@ card.jpg
 card.png
 
 # Xcode
+BusinessCardScanner/Secrets.xcconfig
 BusinessCardScanner/build/
 BusinessCardScanner/*.xcodeproj/xcuserdata/
 BusinessCardScanner/*.xcodeproj/project.xcworkspace/xcuserdata/
