--- a/BusinessCardScanner/project.yml
+++ b/BusinessCardScanner/project.yml
@@ -1,6 +1,5 @@
 name: BusinessCardScanner
 options:
-  bundleIdPrefix: com.algoltek
   deploymentTarget:
     iOS: "17.0"
   xcodeVersion: "16.0"
@@ -16,20 +15,26 @@ targets:
           - project.yml
           - "*.xcodeproj"
           - "*.xcworkspace"
+          - "*.xcconfig"
+          - "*.xcconfig.example"
+    preBuildScripts:
+      - name: Check Secrets.xcconfig
+        script: |
+          if [ ! -f "${PROJECT_DIR}/Secrets.xcconfig" ]; then
+            echo "error: Secrets.xcconfig not found. Copy Secrets.xcconfig.example to Secrets.xcconfig and fill in OLLAMA_BASE_URL, DEVELOPMENT_TEAM, and PRODUCT_BUNDLE_IDENTIFIER."
+            exit 1
+          fi
+        basedOnDependencyAnalysis: false
+    configFiles:
+      Debug: Secrets.xcconfig
+      Release: Secrets.xcconfig
     settings:
       base:
         SWIFT_VERSION: "5.9"
         TARGETED_DEVICE_FAMILY: "1"
         INFOPLIST_FILE: Info.plist
-        PRODUCT_BUNDLE_IDENTIFIER: com.algoltek.One-Click-Firmware-Upgrade
+        PRODUCT_BUNDLE_IDENTIFIER: $(PRODUCT_BUNDLE_IDENTIFIER)
         MARKETING_VERSION: "1.0.0"
         CURRENT_PROJECT_VERSION: "1"
-        DEVELOPMENT_TEAM: FDC3UTQZXL
+        DEVELOPMENT_TEAM: $(DEVELOPMENT_TEAM)
         CODE_SIGN_STYLE: Automatic
-        GENERATE_INFOPLIST_FILE: true
-        INFOPLIST_KEY_NSCameraUsageDescription: "Camera access is needed to take photos of business cards for scanning."
-        INFOPLIST_KEY_NSPhotoLibraryUsageDescription: "Photo library access is needed to select existing business card images."
-        INFOPLIST_KEY_NSContactsUsageDescription: "Contacts access is needed to save scanned business card information."
-        INFOPLIST_KEY_NSLocalNetworkUsageDescription: "Local network access is needed to connect to the Ollama LLM server."
-        INFOPLIST_KEY_UILaunchScreen_Generation: true
-        INFOPLIST_KEY_UISupportedInterfaceOrientations: UIInterfaceOrientationPortrait
