--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,7 @@ name = "business-card"
 version = "0.1.0"
 description = "Business card image parser with OCR and LLM extraction"
 readme = "README.md"
-authors = [
-    { name = "mj.li", email = "mj.li@algoltek.com" }
-]
+authors = []
 requires-python = ">=3.10"
 dependencies = [
     "paddleocr>=3.0.0",
