:sparkles: Add KYC-style guide overlay, real-time detection, and perspective correction
- Replace plain green overlay with KYC-style card guide: dimming mask,
  rounded-rect cutout, L-shaped corner marks with pulse animation,
  and instruction label; adapts to portrait/landscape orientation
- Add real-time VNDetectRectanglesRequest with ROI restricted to guide
  area; green quadrilateral overlay with low-pass corner smoothing and
  delayed disappearance (hideThreshold = 10 frames)
- Capture snaps the latest rectangle observation; perspectiveCorrect()
  runs on the RAW sensor image (before EXIF orientation) so observation
  coords match the pixel layout — applying EXIF first would swap W/H
  in portrait mode and produce incorrect crops
- Fallback path: cropToGuideFrame maps view-coord guide rect to CIImage
  pixels via resizeAspectFill math when no detection is available
- Thread skipCardDetection flag through ScanView → BusinessCardParser →
  OCREngine → VisionOCREngine so perspective-corrected images bypass
  redundant rectangle detection in the OCR pipeline
- Add CIImage.baked() helper to flatten transforms before downstream
  processing; add defensive extent guards throughout Vision pipeline
- Add AppDelegate with static allowLandscape flag; camera screen can
  rotate while the rest of the app stays portrait-locked
- Photo picker path now applies EXIF orientation before processing

--- a/BusinessCardScanner/Info.plist
+++ b/BusinessCardScanner/Info.plist
@@ -36,6 +36,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>OllamaBaseURL</key>
 	<string>$(OLLAMA_BASE_URL)</string>
